# lightweight_simulator_robot

./: .gdb_history  .gitignore  CMakeLists.txt
client/: README.md  demo_client.py  demo_client_2.0.py  demo_server.py  example_client.py  recorders.list  setup.py
client/Lsr/: LsrClient.py  LsrLogger.py  LsrProtocol.py  LsrRecorder.py  LsrTypes.py  __init__.py
client/LsrUI/: LsrClient.py  LsrProtocol.py
doc/: Doxyfile.in
doc/static/: main_page.md
examples/: CMakeLists.txt  example-001-simple_example.cpp  example-001.cpp  example-002.cpp  example-003.cpp  example-005-client_str.cpp
framework/: CMakeLists.txt
framework/examples/: CMakeLists.txt  example-001-simple_example.cpp  example-003-ultrasonic.cpp  example-004-attractive_field.cpp  example-005-client_float.cpp  example-005-recorder.cpp  example-005-recorder_plus.cpp
framework/include/communication/: subscriber.hpp
framework/include/element/: container.hpp  resource.hpp
framework/include/env/: board.hpp  cell.hpp  physic.hpp
framework/include/instruction/: instruction.hpp
framework/include/recorder/: payload.hpp  recorder_file.hpp  server.hpp
framework/include/robot/: robot.hpp
framework/include/sensor/: detector_sensor.hpp  sensor.hpp  ultrasonic_sensor.hpp
framework/src/: CMakeLists.txt  board.cpp  cell.cpp  i_recorder.cpp  interacter.cpp  payload.cpp  robot.cpp  scheduler.cpp  sensor.cpp  unknown.cpp  wall.cpp
framework/src/communication/: CMakeLists.txt
framework/src/element/: CMakeLists.txt
framework/src/element/include/element/: container.hpp  element.hpp
framework/src/element/src/: element.cpp  resource.cpp  wall.cpp
framework/src/env/: CMakeLists.txt
framework/src/env/include/env/: board.hpp  cell.hpp  physic.hpp  ultrasound.hpp
framework/src/env/src/: board.cpp  cell.cpp  physic.cpp  ultrasound.cpp
framework/src/graph/include/: node.hpp
framework/src/graph/src/: node.cpp
framework/src/instruction/: CMakeLists.txt
framework/src/instruction/src/: instruction.cpp
framework/src/recorder/: CMakeLists.txt
framework/src/recorder/include/recorder/: payload.hpp  recorder.hpp  recorder_server.hpp
framework/src/recorder/src/: server.cpp
framework/src/robot/: CMakeLists.txt
framework/src/scheduler/: CMakeLists.txt
framework/src/scheduler/include/scheduler/: scheduler.hpp
framework/src/scheduler/src/: scheduler.cpp
framework/src/sensor/: CMakeLists.txt
framework/src/sensor/src/: ultrasonic_sensor.cpp
framework/src/task /: CMakeLists.txt
framework/src/utils/: CMakeLists.txt
framework/src/utils/include/utils/: point2D.hpp
framework/src/utils/src/: point2D.cpp
framework/tools/: graph.py
include/: scheduler.hpp
include/communication/: handle_communication.hpp  interacter.hpp  publisher.hpp  subscriber.hpp  topic.hpp
include/element/: element.hpp  unknown.hpp  wall.hpp
include/env/: board.hpp  cell.hpp  ultrasound.hpp
include/instruction/: instruction.hpp  move_instruction.hpp
include/robot/: robot.hpp
include/sensor/: sensor.hpp  ultrasonic_sensor.hpp
include/task /: task.hpp
include/utils/: point2D.hpp
src/: CMakeLists.txt  board.cpp  cell.cpp  detector_sensor.cpp  element.cpp  handle_communication.cpp  i_publisher.cpp  i_sensor.cpp  i_subscriber.cpp  i_topic.cpp  point2D.cpp  publisher.cpp  robot.cpp  scheduler.cpp  sensor.cpp  ultrasonic_sensor.cpp  ultrasound.cpp
